<resources>
    <string name="app_name" translatable="false">E-Fit</string>
    <string name="home" translatable="false">Inicio</string>
    <string name="new_account">Crear cuenta</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="connection_error">Hubo un error de conexión.</string>

    <string name="clear_session">Cerrar Sesión</string>

    <string name="create_account">Crear cuenta</string>
    <string name="training">Entrenar</string>
    <string name="my_info">Mis datos</string>
    <string name="change_pasword">Cambiar contraseña</string>
    <string name="repeat_pasword">Repita la contraseña</string>
    <string name="fail_repeat_pasword">Las contraseñas no coinciden</string>
    <string name="exercises">Ejericicios</string>
    <string name="exercise">Ejericicio</string>
    <string name="input_nsets">Introduzca el numero de series</string>
    <string name="input_exe_type">Introduzca el tipo de ejercicio</string>
    <string name="input_rest">Introduzca el descanso </string>
    <string name="select_exercises">Seleccione los ejericicios</string>


    <string name="welcome">"Welcome !"</string>
    <string name="_return">Volver</string>
    <string name="_more">Ver Más</string>
    <string name="_go">Ir</string>
    <string name="_view">Ver</string>
    <string name="_loading">Cargando ...</string>
    <string name="_update">Actualizar</string>
    <string name="_confirm">Confirmar</string>
    <string name="_delete">Eliminar</string>
    <string name="_new">Crear</string>
    <string name="_done">Hecho</string>
    <!--VALIDATIONS____________________________________________________-->
    <!--VALIDATIONS____________________________________________________-->
    <!--VALIDATIONS____________________________________________________-->
    <string name="invalid_username">El usuario no existe</string>
    <string name="invalid_empty_username">El usuario no ha sido introducido</string>
    <string name="invalid_password">La contraseña es incorecta</string>
    <string name="invalid_empty_password">La contraseña no ha sido introducida</string>
    <string name="user_update_error">No se pudo actualizar el usuario</string>
    <string name="empty_scores">No hay marcas asociadas a este ejercicio</string>
    <string name="action_sign_in_short">No existe el usuario</string>
    <string name="action_sign_in">No existe el usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="scores">Marcas</string>
    <string name="prompt_email">Email :</string>
    <string name="prompt_name">Nombre :</string>
    <string name="prompt_surname">Apellidos: </string>
    <string name="prompt_password">Contraseña: </string>
    <string name="prompt_duration">Duración estimada (h:mm) </string>
    <string name="prompt_duration_short">(h:mm) </string>
    <string name="prompt_comment">Introduzca un comentario </string>
    <string name="prompt_description">Descripción: </string>
    <string name="prompt_def_day">Dia de la semana por defecto </string>
    <string name="login_button">Login</string>
    <string name="routines">rutinas</string>
    <string name="my_routines">Mis rutinas</string>
    <string name="fail_load_routine">Error al cargar rutinas</string>
    <string name="empty_routines">No se ha creado ninguna rutina</string>
    <string name="AddExercises">Cargar Ejercios</string>

</resources>