<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/routines"
                android:textColor="@color/black_0"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:padding="12dp"
                android:text="@string/_delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background_light"
            android:hint="@string/prompt_name"
            android:padding="10dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_2" />

        <EditText
            android:id="@+id/etEstimatedDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background_light"
            android:hint="@string/prompt_duration"
            android:padding="10dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_2" />

        <Spinner
            android:id="@+id/spDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_light"
            android:hint="@string/prompt_description"
            android:padding="10dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnAddExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black_1"
            android:padding="12dp"
            android:text="@string/AddExercises"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="@string/_new"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/red"
            android:padding="12dp"
            android:text="@string/_return"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
