<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/black_1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black_0"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_2"
                android:textColor="@color/black_1"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_2"
                android:textColor="@color/black_1"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:backgroundTint="@color/black_1"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_1"
                android:text="@string/forgot_password"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_1"
                android:text="@string/new_account"
                android:padding="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>