<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/create_account"
                android:textColor="@color/black_0"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black_1"
                android:textColorHint="@color/black_2" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_surname"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black_1"
                android:textColorHint="@color/black_2" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black_1"
                android:textColorHint="@color/black_2" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black_1"
                android:textColorHint="@color/black_2" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/red"
                android:textSize="11sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/black_2"
                android:text="@string/new_account"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>