<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/background_gym_1"
    android:orientation="vertical"
    tools:context=".ui.exercise.ExerciseList">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:textColor="@color/black_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:textColor="@color/black_3"
        android:text="@string/_loading"/>

    <ListView
        android:id="@+id/lvRoutines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/_new"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>
