<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".ui.routine.ExerciseSetterList">


    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_exercises"
        android:textColor="@color/black_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:background="@drawable/input"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_3"
            android:hint="@string/prompt_name" />

        <Spinner
            android:id="@+id/spMuscularGroup"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/spinner"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvRoutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_exercises"
        android:textColor="@color/black_1"
        android:textSize="12sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/_loading"/>

    <ListView
        android:id="@+id/lvExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_return"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddExercises"
        android:backgroundTint="@color/black_3"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
