<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/background_gym"
    android:orientation="vertical"
    tools:context=".ui.exercise.ExerciseList">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:background="@drawable/input"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_3"
            android:hint="@string/prompt_name" />

        <Spinner
            android:id="@+id/spMuscularGroup"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/spinner"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/_loading"/>

    <ListView
        android:id="@+id/lvExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" />

</LinearLayout>
