<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:background="@color/green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="3"
            android:text="@string/routines"
            android:textColor="@color/black_0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:backgroundTint="@color/red"
            android:padding="12dp"
            android:text="@string/_return"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_background_light"
            android:padding="10dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_2" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background_light"
            android:hint="@string/prompt_duration_short"
            android:padding="10dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"/>

    <ProgressBar
        android:id="@+id/pbNsets"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:progressTint="@color/black_3"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tvNsets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_2"
        android:textAlignment="center"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black_2"
            android:padding="12dp"
            android:text="@string/_new"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>